# jitify_libcuda_testbed

./: .gitignore  CMakeLists.txt  get_jitify.cmake  make_jit_kernels.cmake  use_cuda_std.cu  use_cuda_std_and_std.cu  use_global.cu  use_std.cu
